<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">远程患者</string>
    <string name="name">姓名</string>
    <string name="phone">手机号</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="login_now">立即登录</string>
    <string name="register_now">立即注册</string>
    <string name="confirm_change">确认修改</string>
    <string name="change_information">修改资料</string>
    <string name="confirm_password">确认密码</string>

    <string name="home_tab_doctor">医生</string>
    <string name="home_tab_message">消息</string>
    <string name="home_tab_me">我</string>
    <string name="app_ask">咨询</string>
    <string name="be_kind_at">擅长领域:</string>
    <string name="account_null_tip">账号不能为空</string>
    <string name="pwd_null_tip">密码不能为空</string>
    <string name="name_null_tip">名字不能为空</string>
    <string name="confirm_pwd_null_tip">确认密码不能为空</string>
    <string name="wrong_pwd_tip">两次密码不同</string>
    <string name="account_pwd_null_tip">账号或密码错误</string>
    <string name="get_RC_error">获取融云Token失败!</string>

    <string name="my_data_str">我的资料</string>
    <string name="my_rc">预约日程</string>
    <string name="my_jf">我的积分</string>
    <string name="my_qb">我的钱包</string>
    <string name="my_ct">我的词条</string>
    <string name="detail_data">详细资料</string>
    <string name="sick_record">病例记录</string>
    <string name="send_msg">发送消息</string>
    <string name="send_order">发起预约</string>

    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="sick_description">描述</string>
    <string name="order_wait">未处理</string>
    <string name="order_accept">接受预约</string>
    <string name="order_reject">拒绝预约</string>
    <string name="logining_tip">登录中...</string>
    <string name="dialog_comfire">确定</string>
    <string name="reject_reason">拒绝理由</string>

    <string name="reservation_name">姓名</string>
    <string name="reservation_sex">性别</string>
    <string name="reservation_old">年龄</string>
    <string name="reservation_current_symptom">目前症状</string>
    <string name="reservation_begin_sick_time">开始发病时间</string>
    <string name="reservation_taken_treatment">采取过何种治疗（若没有填无）</string>
    <string name="reservation_taken_place">曾在何地就医（若没有填无）</string>
    <string name="reservation_height">身高(单位:厘米)</string>
    <string name="reservation_weight">体重(单位:斤)</string>
    <string name="reservation_career">职业</string>
    <string name="reservation_time_btn">确定预约时间</string>
    <string name="sex_null_tip">性别不能为空</string>
    <string name="old_null_tip">年龄不能为空</string>
    <string name="career_null_tip">职业不能为空</string>
    <string name="height_null_tip">身高不能为空</string>
    <string name="weight_null_tip">体重不能为空</string>
    <string name="current_symptom_null_tip">目前症状不能为空</string>
    <string name="begin_sick_time_null_tip">开始发病时间不能为空</string>
    <string name="taken_treatment_null_tip">采取过何种治疗不能为空</string>
    <string name="taken_place_null_tip">曾在何地就医不能为空</string>

    <string name="treatment">治疗或建议方案</string>
    <string name="reservation_confirm_btn">确定</string>

    <string name="view1">①在人的左手掌和手臂之间有一块凸起的骨头A（用右手的中指可以摸到），您需要在这块骨头A的正下方用笔画一个点</string>
    <string name="view2">②如图将脉搏设备中间的孔对准所画的黑点并像戴手表一样戴好，左右的两个孔均可上下调节</string>

    <!-- 123 BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <!-- 123 BluetoothChat -->

    <string name="intro_message">
        <![CDATA[


            This application allows two Android devices to carry out two-way text chat over
            Bluetooth. It demonstrates all the fundamental Bluetooth API capabilites, such as:
              (1) Scanning for other Bluetooth devices
              (2) Querying the local Bluetooth adapter for paired Bluetooth devices
              (3) Establishing RFCOMM channels/sockets
              (4) Connecting to a remote device
              (5) Transfering data over Bluetooth


        ]]>
    </string>

</resources>
