<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <include layout="@layout/title_bar"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/layout_item_bg">
    <EditText
        android:id="@+id/reservation_name"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:background="@drawable/app_edit_bg"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:inputType="textCapWords"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="14sp"
        android:hint="@string/reservation_name"/>

    <EditText
        android:id="@+id/reservation_sex"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/app_edit_bg"
        android:layout_toRightOf="@id/reservation_name"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:inputType="textCapWords"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="14sp"
        android:hint="@string/reservation_sex"/>

    <EditText
        android:id="@+id/reservation_old"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/app_edit_bg"
        android:layout_toRightOf="@id/reservation_sex"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:inputType="textCapWords"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="14sp"
        android:hint="@string/reservation_old"/>

        <EditText
            android:id="@+id/reservation_career"
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:background="@drawable/app_edit_bg"
            android:layout_toRightOf="@id/reservation_old"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:inputType="textCapWords"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="14sp"
            android:hint="@string/reservation_career"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/layout_item_bg">
    <EditText
        android:id="@+id/reservation_height"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:background="@drawable/app_edit_bg"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="14sp"
        android:hint="@string/reservation_height"/>
    <EditText
        android:id="@+id/reservation_weight"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:background="@drawable/app_edit_bg"
        android:layout_toRightOf="@id/reservation_height"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="14sp"
        android:hint="@string/reservation_weight"/>
</RelativeLayout>

    <EditText
        android:id="@+id/reservation_current_symptom"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/app_edit_bg"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="14sp"
        android:hint="@string/reservation_current_symptom"/>
    <EditText
        android:id="@+id/reservation_begin_sick_time"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/app_edit_bg"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="14sp"
        android:hint="@string/reservation_begin_sick_time"/>
    <EditText
        android:id="@+id/reservation_taken_treatment"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/app_edit_bg"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="14sp"
        android:hint="@string/reservation_taken_treatment"/>
    <EditText
        android:id="@+id/reservation_taken_place"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/app_edit_bg"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="14sp"
        android:hint="@string/reservation_taken_place"/>
    <Button
        android:id="@+id/reservation_time_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/reservation_time_btn"
        android:textColor="@color/app_white"
        android:background="@drawable/green_btn_bg"/>
</LinearLayout>