<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/layout_item_bg">
        <TextView
            android:id="@+id/see_reservation_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/app_edit_bg"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="14sp"
            android:inputType="textCapWords"
            android:scrollbars="vertical"
            android:hint="@string/reservation_name"/>

        <TextView
            android:id="@+id/see_reservation_sex"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/app_edit_bg"
            android:layout_toRightOf="@id/see_reservation_name"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:inputType="textCapWords"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="14sp"
            android:hint="@string/reservation_sex"/>

        <TextView
            android:id="@+id/see_reservation_old"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/app_edit_bg"
            android:layout_toRightOf="@id/see_reservation_sex"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:inputType="textCapWords"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="14sp"
            android:hint="@string/reservation_old"/>

        <TextView
            android:id="@+id/see_reservation_career"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:background="@drawable/app_edit_bg"
            android:layout_toRightOf="@id/see_reservation_old"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:inputType="textCapWords"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="14sp"
            android:scrollbars="vertical"
            android:hint="@string/reservation_career"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/layout_item_bg">
        <TextView
            android:id="@+id/see_reservation_height"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:background="@drawable/app_edit_bg"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="14sp"
            android:hint="@string/reservation_height"/>
        <TextView
            android:id="@+id/see_reservation_weight"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:background="@drawable/app_edit_bg"
            android:layout_toRightOf="@id/see_reservation_height"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="14sp"
            android:hint="@string/reservation_weight"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/see_reservation_current_symptom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/app_edit_bg"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="14sp"
        android:scrollbars="vertical"
        android:hint="@string/reservation_current_symptom"/>
    <TextView
        android:id="@+id/see_reservation_begin_sick_time"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/app_edit_bg"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="14sp"
        android:scrollbars="vertical"
        android:hint="@string/reservation_begin_sick_time"/>
    <TextView
        android:id="@+id/see_reservation_taken_treatment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/app_edit_bg"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="14sp"
        android:scrollbars="vertical"
        android:hint="@string/reservation_taken_treatment"/>
    <TextView
        android:id="@+id/see_reservation_taken_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/app_edit_bg"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="14sp"
        android:scrollbars="vertical"
        android:hint="@string/reservation_taken_place"/>
    <TextView
        android:id="@+id/see_reservation_doctor_suggest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/app_edit_bg"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="14sp"
        android:scrollbars="vertical"
        android:hint="@string/treatment"/>
    <Button
        android:id="@+id/see_reservation_confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/reservation_confirm_btn"
        android:textColor="@color/app_white"
        android:background="@drawable/green_btn_bg"/>


</LinearLayout>
    </ScrollView>