<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/app_common_color_green"/>
    <EditText
        android:id="@+id/login_phone"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/app_edit_bg"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textCapWords"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="14sp"
        android:hint="@string/phone"/>
    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/app_edit_bg"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="14sp"
        android:hint="@string/password"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_gray"
            android:text="@string/forget_password"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:textSize="15sp"/>
    </RelativeLayout>
    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/login_now"
        android:textColor="@color/app_white"
        android:background="@drawable/green_btn_bg"/>
</LinearLayout>