<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/app_common_color_green"/>

    <EditText
        android:id="@+id/register_name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/app_edit_bg"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="14sp"
        android:hint="@string/name"/>

    <EditText
        android:id="@+id/register_phone"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/app_edit_bg"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textCapWords"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="14sp"
        android:hint="@string/phone"/>

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/app_edit_bg"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="14sp"
        android:hint="@string/password"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">
    </RelativeLayout>
    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/register_now"
        android:textColor="@color/app_white"
        android:background="@color/rc_voice_color"/>
</LinearLayout>