<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/app_common_color_green"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView android:text="@string/name"
            android:layout_width="match_parent"
            android:textSize="20dp"
            android:layout_weight="4"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>

        <TextView
            android:id="@+id/information_name"
            android:text="患者一"
            android:layout_width="match_parent"
            android:textSize="20dp"
            android:layout_weight="1"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView android:text="@string/phone"
            android:layout_width="match_parent"
            android:textSize="20dp"
            android:layout_weight="4"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>

        <TextView
            android:id="@+id/information_phone"
            android:text="15108307491"
            android:layout_width="match_parent"
            android:textSize="20dp"
            android:layout_weight="1"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>

    </LinearLayout>
    <Button
        android:id="@+id/change_information_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/change_information"
        android:textColor="@color/app_white"
        android:background="@drawable/green_btn_bg"/>
</LinearLayout>