<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_gray_bg"
    android:orientation="vertical">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <include layout="@layout/title_bar"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">
                <LinearLayout
                    android:id="@+id/green_layout"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@color/app_common_color_green"
                    android:orientation="horizontal"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@color/app_white"
                    android:layout_below="@id/green_layout">

                </RelativeLayout>
                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/doctor_icon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    app:fadeDuration="1000"
                    app:roundAsCircle="true"
                    android:layout_centerInParent="true" />
                <TextView
                    android:id="@+id/doctor_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/app_black"
                    android:layout_below="@id/doctor_icon" />
                <TextView
                    android:id="@+id/doctor_appellation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/text_color_gray"
                    android:layout_below="@id/doctor_name" />
                <TextView
                    android:id="@+id/doctor_major"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/text_color_gray"
                    android:layout_below="@id/doctor_appellation" />
                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@drawable/girl_pic"
                    android:layout_alignTop="@id/doctor_name"
                    android:layout_toRightOf="@id/doctor_name"
                    android:layout_marginLeft="5dp"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="1px"
                android:background="@drawable/layout_item_bg">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/detail_data"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/app_black"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/right_arrow"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="1px"
                android:background="@drawable/layout_item_bg">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/sick_record"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/app_black"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/layout_item_bg">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="随访记录"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/app_black"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/right_arrow"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"/>
            </RelativeLayout>

            <Button
                android:id="@+id/doctor_send_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/send_msg"
                android:textColor="@color/app_white"
                android:background="@drawable/green_btn_bg"/>
            <Button
                android:id="@+id/yy_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/send_order"
                android:textColor="@color/text_color_gray"
                android:background="@drawable/white_btn_off"/>
        </LinearLayout>

</LinearLayout>
